# Lets-stay-updated

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  License.md  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  start_fastapi.py  tsconfig.json  vite.config.ts
backend/: .env.example  __init__.py  main.py  requirements.txt
backend/api/: routes.py
backend/core/: config.py  database.py  llm_config.py
backend/models/: schemas.py
backend/services/: groq_service.py  groq_service_new.py  llm_service.py  news_aggregator.py
backend/utils/: json_repair.py
client/src/: index.css
client/src/components/: loading-state.tsx  news-results.tsx  region-selection.tsx  source-preferences.tsx  step-indicator.tsx  topic-selection.tsx
client/src/lib/: api.ts
client/src/pages/: home.tsx
frontend/: package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Home.jsx  Loading.jsx  Navbar.jsx  Results.jsx
scripts/: deploy.sh
server/: fastapi-proxy.ts  index.ts  routes-new.ts  routes.ts  storage.ts
server/services/: groq.ts  openai.ts
shared/: schema.ts
tmp/lets-stay-updated-simple/: .env.example  package.json  vite.config.js
tmp/news-aggregator-clean/: .env.example  .gitignore  DEPLOYMENT.md  README.md  package.json  render.yaml
tmp/news-aggregator-deploy/: .env.example  .gitignore  DEPLOYMENT.md  README.md  package.json
